--- a/proyects/proyects.html
+++ b/proyects/proyects.html
@@ -26,7 +26,7 @@
 </header>
 <section> 
     <div class="conteiner">
-        <form action="/php/form.php" method="post" id="box_form" class="formulario">
+        <form action=https://formspree.io/f/mwkadono method="post" id="box_form" class="formulario">
 
             <label>Name <span  class="f-i">*</span></label> 
             <input id="name" type="text"n name="NOMBRE" required>
