--- a/proyects/proyects.html
+++ b/proyects/proyects.html
@@ -32,14 +32,14 @@
             <input id="name" type="text"n name="NOMBRE" required>
 
             <label>Email<span class="f-i">*</span></label>  
-            <input id="email" type="email" name="CORREO" required>
+            <input type="email" name="_replyto">
 
             <label >company/organizacion<span class="f-i">*</span></label>
             <input id="company" type="text" name="ASUNTO" required>
 
-            <label>mensaje</label><textarea id="textarea" name="MENSAJE" maxlength="60" id="" cols="30" rows="10"></textarea>
+            <label>mensaje</label><textarea name="message"></textarea>
 
-            <input  class="enviar" type="submit"   value="Enviar">
+            <<button type="submit">Send</button>
         </form>
     </div>
 </section>
