--- a/proyects/proyects.html
+++ b/proyects/proyects.html
@@ -40,7 +40,7 @@
 
             <label>mensaje</label><textarea id="textarea" name="message" maxlength="60" id="" cols="30" rows="10"></textarea>
 
-            <button  class="enviar" type="submit"   value="Enviar"></button>
+            <input  class="enviar" type="submit"   value="Enviar">
         </form>
     </div>
 </section>
