--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <section>
   <div class="presentacion">
     <div><p>Sobre Mi</p></div>
-    <div>Mi nombre es Yonatan Quiroga tengo 22 años, actualmente cuento con un titulo de Electromecanico y 
-        me encuentro en busca de trabajo.
-        Mi pasion es la tecnologia, Mucha parte de mi tiempo libre lo paso enfrente de mi computadora, siempre buscando informacion o aprendiendo algo nuevo.
+    <div>Mi nombre es Yonatan Quiroga tengo 22 años, actualmente cuento con un título de Electromecánico y 
+        me encuentro en busca de un trabajo.
+        Mi pasión es la tecnología, mucha parte de mi tiempo libre lo paso enfrente de mi computadora, siempre buscando información o aprendiendo algo nuevo.
         Esto me llevo a descubrir nuevas habilidades, tales como programar con HTml:5/CSS/JAVASCRIPT. Hoy me encuentro inscripto 
-        en la universidad de la matanza, cursando el curso de ingreso para TECNICO UNIVERSITARIO EN DESARROLLO WEB. Estos son algunos de mis proyectos personales.
+        en la universidad de la Matanza, cursando el curso de ingreso para TECNICO UNIVERSITARIO EN DESARROLLO WEB. Estos son algunos de mis proyectos personales.
 
     </div>
   </div>
