--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         me encuentro en busca de un trabajo.
         Mi pasión es la tecnología, mucha parte de mi tiempo libre lo paso enfrente de mi computadora, siempre buscando información o aprendiendo algo nuevo.
         Esto me llevo a descubrir nuevas habilidades, tales como programar con HTml:5/CSS/JAVASCRIPT. Hoy me encuentro inscripto 
-        en la universidad de la Matanza, cursando el curso de ingreso para TECNICO UNIVERSITARIO EN DESARROLLO WEB. Estos son algunos de mis proyectos personales.
+        en la universidad de la Matanza, cursando el curso de ingreso para TECNICO UNIVERSITARIO EN DESARROLLO WEB. 
 
     </div>
   </div>
