--- a/proyects/proyects.html
+++ b/proyects/proyects.html
@@ -29,16 +29,16 @@
         <form action=https://formspree.io/f/mwkadono method="post" id="box_form" class="formulario">
 
             
-            <label>Name <span  class="f-i">*</span></label> 
+            <label>Nombre <span  class="f-i">*</span></label> 
             <input id="name" type="text" name="NOMBRE" required>
 
             <label>Email<span class="f-i">*</span></label>  
             <input id="email" type="email" name="_replyto" required>
 
-            <label >company/organizacion<span class="f-i">*</span></label>
+            <label >Empresa/Organizacion<span class="f-i">*</span></label>
             <input id="company" type="text" name="ASUNTO" required>
 
-            <label>mensaje</label><textarea id="textarea" name="message" maxlength="60" id="" cols="30" rows="10"></textarea>
+            <label>Mensaje</label><textarea id="textarea" name="message" maxlength="60" id="" cols="30" rows="10"></textarea>
 
             <input  class="enviar" type="submit"   value="Enviar">
         </form>
@@ -48,10 +48,10 @@
     <div class="datos">
         <ul>
             <li> <h2><span class="icon-map"></span>Direccion:</h2></li>
-            <li class="li"><span class="icon-location2"></span>km52,santa anita,buenos aires</li>
+            <li class="li"><span class="icon-location2"></span>km52,Santa Anita,Buenos Aires</li>
         </ul>
         <ul>
-            <li><h2><span class="icon-mail3"></span>Email/telefono:</h2></li>
+            <li><h2><span class="icon-mail3"></span>Email/Telefono:</h2></li>
             <li class="li"><a href="#">Quirogayoni@hotmail.com</a></li>
             <li class="li">1131996318</li>
         </ul>
