--- a/proyects/proyects.html
+++ b/proyects/proyects.html
@@ -16,7 +16,7 @@
 <header>
     <div class="header">
         <p id="saludo">HOLA!</p>
-        <p class="sub">En breve contestare tu email</p>
+        <p class="sub">En breve contestaré tu email</p>
     </div>
     <div class="barra">
         <span class="icon-whatsapp"> </span>
@@ -47,11 +47,11 @@
 <section> 
     <div class="datos">
         <ul>
-            <li> <h2><span class="icon-map"></span>Direccion:</h2></li>
+            <li> <h2><span class="icon-map"></span>Dirección:</h2></li>
             <li class="li"><span class="icon-location2"></span>km52,Santa Anita,Buenos Aires</li>
         </ul>
         <ul>
-            <li><h2><span class="icon-mail3"></span>Email/Telefono:</h2></li>
+            <li><h2><span class="icon-mail3"></span>Email/Teléfono:</h2></li>
             <li class="li"><a href="#">Quirogayoni@hotmail.com</a></li>
             <li class="li">1131996318</li>
         </ul>
